act according to bufferPolicies